# G.U.A.R.D.I.A.N

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  build_wasm.bat  deny.toml  fix_wgpu.py  test_wasm.bat  webdriver.json
.cargo/: Config.toml
assets/: guardian.rc
guardian_core/: Cargo.toml  graph.html
guardian_core/src/: lib.rs  main.rs
guardian_core/src/cpu/: interface.rs  mod.rs  model.rs  stats.rs
guardian_core/src/cpu/process/: interconnection_plasticity.rs  interconnection_state.rs  intraconnection_plasticity.rs  intraconnection_state.rs  io_ports.rs  mod.rs  neuron_state.rs  stage1.rs  stage2.rs  stage3.rs  stage4.rs  stage5.rs
guardian_core/src/gpu/: interface.rs  mod.rs  wgsl_parsing.rs
guardian_core/src/gpu/shaders/inputs/: params.wgsl  synapses.wgsl  terminals.wgsl
guardian_core/src/gpu/shaders/stages/: stage_test.wgsl  terminal2terminal.wgsl
guardian_core/src/gpu/shaders/utils/: ranges.wgsl  utils.wgsl
guardian_core/src/gpu/shaders_old/: shader_bkup.wgsl  shader_bkup2.wgsl
guardian_core/src/networking/: mod.rs  webrtc_native.rs  webrtc_wasm.rs
guardian_core/src/visualization/: graph.rs  mod.rs
guardian_core/src/wasm/: guardian.rs  lib.rs  main.rs  wasm_pool.rs
guardian_website/: Cargo.toml  workers-polyfill.js
guardian_website/resources/: index.html  worker.js
guardian_website/src/: main.rs
