[package]
name = "guardian_core"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true
license-file.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
name = "glib"

[dependencies]
wgpu = { git = "https://github.com/gfx-rs/wgpu.git", rev = "ed7d9de" }
bytemuck = { version = "1.15.0", features = ["derive"] }
flume = "0.11.0"
pollster = "0.3"
ndarray = { version = "0.15.6", features = ["rayon", "serde"] }
ndarray-rand = "0.14.0"
#ndarray-stats = "0.5.1"
encase = "0.8.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
anyhow = "1.0.81"
num-traits = "0.2.18"
regex = "1.10.4"
humansize = "2.1.3"
itertools = "0.13.0"
rayon = "1.10.0"
rand = "0.8.5"
serde_json = "1.0.117"
serde = { version = "1.0.202", features = ["derive"] }

# Consider replacing? Will not compile nicely for every target
tokio = { version = "1.37.0", features = ["full"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
js-sys = "0.3.69"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
web-sys = "0.3.69"
